# predict_nfl_match_winner

./: README.md  model.joblib  pyproject.toml
app/: app.py
notebook/: project.ipynb
project/: matchup_model.joblib  predict_using_matchup.ipynb
