[project]
name = "nfl-team-winner"
version = "0.1.0"
description = ""
authors = [
    {name = "kazirshahria",email = "kazirshahria@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nfl-data-py (==0.3.2)",
    "scipy (>=1.16.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

